--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
       "inline"
     ],
     "website": "https://github.com/8769ANURAG/EvaMaria",
-    "repository": "https://github.com/8769ANURAG/EvaMaria",
+    "repository": "https://github.com/Alberteinstien/EvaMaria",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
